Bug 414133. Accessible selection methods not working in form controls. r=surkov, a=dsicore